--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=springvue
+
+spring.datasource.app.url=jdbc:oracle:thin:@localhost:1521:DB
+spring.datasource.app.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.app.username=user
+spring.datasource.app.password=password
